--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/GAwsH/wsH.github.io",
+  "homepage": "https://github.com/GAwsH/React-Practice",
   "devDependencies": {
     "gh-pages": "^6.1.0"
   }
